src/llvm_parser/llvmParser.py
# Generated from llvm.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class llvmParser ( Parser ):

    grammarFileName = "llvm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'i32'", "'ptr'", "'void'", "'i1'", "'declare'", 
                     "'('", "')'", "'define'", "'{'", "'}'", "'='", "'type'", 
                     "'global'", "'['", "'x'", "'i8'", "']'", "'c'", "','", 
                     "':'", "'ret'", "'call'", "'add'", "'sub'", "'mul'", 
                     "'sdiv'", "'srem'", "'shl'", "'ashl'", "'and'", "'or'", 
                     "'xor'", "'br'", "'label'", "'%'", "'load'", "'store'", 
                     "'getelementptr'", "'icmp'", "'eq'", "'ne'", "'slt'", 
                     "'sgt'", "'sle'", "'sge'", "'phi'", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Label", "Identifier", "Privatevariable", "Global_var", 
                      "StringLiteral", "INTEGER", "WS" ]

    RULE_module = 0
    RULE_type = 1
    RULE_function_declare = 2
    RULE_function = 3
    RULE_typedelcare = 4
    RULE_globalvariable = 5
    RULE_string_declare = 6
    RULE_params = 7
    RULE_types = 8
    RULE_parameter = 9
    RULE_basic_block = 10
    RULE_instruction = 11
    RULE_ret = 12
    RULE_call = 13
    RULE_binary_op = 14
    RULE_bin_op = 15
    RULE_branch = 16
    RULE_load = 17
    RULE_store = 18
    RULE_getelementptr = 19
    RULE_compare = 20
    RULE_cond = 21
    RULE_phi = 22
    RULE_value = 23
    RULE_constant = 24

    ruleNames =  [ "module", "type", "function_declare", "function", "typedelcare", 
                   "globalvariable", "string_declare", "params", "types", 
                   "parameter", "basic_block", "instruction", "ret", "call", 
                   "binary_op", "bin_op", "branch", "load", "store", "getelementptr", 
                   "compare", "cond", "phi", "value", "constant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    Label=48
    Identifier=49
    Privatevariable=50
    Global_var=51
    StringLiteral=52
    INTEGER=53
    WS=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.FunctionContext)
            else:
                return self.getTypedRuleContext(llvmParser.FunctionContext,i)


        def function_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.Function_declareContext)
            else:
                return self.getTypedRuleContext(llvmParser.Function_declareContext,i)


        def globalvariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.GlobalvariableContext)
            else:
                return self.getTypedRuleContext(llvmParser.GlobalvariableContext,i)


        def string_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.String_declareContext)
            else:
                return self.getTypedRuleContext(llvmParser.String_declareContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)




    def module(self):

        localctx = llvmParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2251799813685536) != 0):
                self.state = 54
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 50
                    self.function()
                    pass

                elif la_ == 2:
                    self.state = 51
                    self.function_declare()
                    pass

                elif la_ == 3:
                    self.state = 52
                    self.globalvariable()
                    pass

                elif la_ == 4:
                    self.state = 53
                    self.string_declare()
                    pass


                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return llvmParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = llvmParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def types(self):
            return self.getTypedRuleContext(llvmParser.TypesContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_function_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declare" ):
                listener.enterFunction_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declare" ):
                listener.exitFunction_declare(self)




    def function_declare(self):

        localctx = llvmParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(llvmParser.T__4)
            self.state = 62
            self.type_()
            self.state = 63
            self.match(llvmParser.Global_var)
            self.state = 64
            self.match(llvmParser.T__5)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 65
                self.types()


            self.state = 68
            self.match(llvmParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def params(self):
            return self.getTypedRuleContext(llvmParser.ParamsContext,0)


        def basic_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.Basic_blockContext)
            else:
                return self.getTypedRuleContext(llvmParser.Basic_blockContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = llvmParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(llvmParser.T__7)
            self.state = 71
            self.type_()
            self.state = 72
            self.match(llvmParser.Global_var)
            self.state = 73
            self.match(llvmParser.T__5)
            self.state = 74
            self.params()
            self.state = 75
            self.match(llvmParser.T__6)
            self.state = 76
            self.match(llvmParser.T__8)
            self.state = 78 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.basic_block()
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==48):
                    break

            self.state = 82
            self.match(llvmParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedelcareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Privatevariable(self):
            return self.getToken(llvmParser.Privatevariable, 0)

        def types(self):
            return self.getTypedRuleContext(llvmParser.TypesContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_typedelcare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedelcare" ):
                listener.enterTypedelcare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedelcare" ):
                listener.exitTypedelcare(self)




    def typedelcare(self):

        localctx = llvmParser.TypedelcareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typedelcare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(llvmParser.Privatevariable)
            self.state = 85
            self.match(llvmParser.T__10)
            self.state = 86
            self.match(llvmParser.T__11)
            self.state = 87
            self.match(llvmParser.T__8)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 88
                self.types()


            self.state = 91
            self.match(llvmParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalvariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def constant(self):
            return self.getTypedRuleContext(llvmParser.ConstantContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_globalvariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalvariable" ):
                listener.enterGlobalvariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalvariable" ):
                listener.exitGlobalvariable(self)




    def globalvariable(self):

        localctx = llvmParser.GlobalvariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_globalvariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(llvmParser.Global_var)
            self.state = 94
            self.match(llvmParser.T__10)
            self.state = 95
            self.match(llvmParser.T__12)
            self.state = 96
            self.type_()
            self.state = 97
            self.constant()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class String_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def INTEGER(self):
            return self.getToken(llvmParser.INTEGER, 0)

        def StringLiteral(self):
            return self.getToken(llvmParser.StringLiteral, 0)

        def getRuleIndex(self):
            return llvmParser.RULE_string_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_declare" ):
                listener.enterString_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_declare" ):
                listener.exitString_declare(self)




    def string_declare(self):

        localctx = llvmParser.String_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_string_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(llvmParser.Global_var)
            self.state = 100
            self.match(llvmParser.T__10)
            self.state = 101
            self.match(llvmParser.T__12)
            self.state = 102
            self.match(llvmParser.T__13)
            self.state = 103
            self.match(llvmParser.INTEGER)
            self.state = 104
            self.match(llvmParser.T__14)
            self.state = 105
            self.match(llvmParser.T__15)
            self.state = 106
            self.match(llvmParser.T__16)
            self.state = 107
            self.match(llvmParser.T__17)
            self.state = 108
            self.match(llvmParser.StringLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.ParameterContext)
            else:
                return self.getTypedRuleContext(llvmParser.ParameterContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = llvmParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 110
                self.parameter()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==19:
                    self.state = 111
                    self.match(llvmParser.T__18)
                    self.state = 112
                    self.parameter()
                    self.state = 117
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.TypeContext)
            else:
                return self.getTypedRuleContext(llvmParser.TypeContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)




    def types(self):

        localctx = llvmParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.type_()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 121
                self.match(llvmParser.T__18)
                self.state = 122
                self.type_()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def Privatevariable(self):
            return self.getToken(llvmParser.Privatevariable, 0)

        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def getRuleIndex(self):
            return llvmParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = llvmParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.type_()
                self.state = 129
                self.match(llvmParser.Privatevariable)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.type_()
                self.state = 132
                self.match(llvmParser.Global_var)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Basic_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Label(self):
            return self.getToken(llvmParser.Label, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.InstructionContext)
            else:
                return self.getTypedRuleContext(llvmParser.InstructionContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_basic_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBasic_block" ):
                listener.enterBasic_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBasic_block" ):
                listener.exitBasic_block(self)




    def basic_block(self):

        localctx = llvmParser.Basic_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_basic_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(llvmParser.Label)
            self.state = 137
            self.match(llvmParser.T__19)
            self.state = 139 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 138
                self.instruction()
                self.state = 141 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1126045942022144) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ret(self):
            return self.getTypedRuleContext(llvmParser.RetContext,0)


        def call(self):
            return self.getTypedRuleContext(llvmParser.CallContext,0)


        def binary_op(self):
            return self.getTypedRuleContext(llvmParser.Binary_opContext,0)


        def branch(self):
            return self.getTypedRuleContext(llvmParser.BranchContext,0)


        def load(self):
            return self.getTypedRuleContext(llvmParser.LoadContext,0)


        def store(self):
            return self.getTypedRuleContext(llvmParser.StoreContext,0)


        def getelementptr(self):
            return self.getTypedRuleContext(llvmParser.GetelementptrContext,0)


        def compare(self):
            return self.getTypedRuleContext(llvmParser.CompareContext,0)


        def phi(self):
            return self.getTypedRuleContext(llvmParser.PhiContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)




    def instruction(self):

        localctx = llvmParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_instruction)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.ret()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.binary_op()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.branch()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 147
                self.load()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 148
                self.store()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 149
                self.getelementptr()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 150
                self.compare()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 151
                self.phi()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def value(self):
            return self.getTypedRuleContext(llvmParser.ValueContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_ret

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet" ):
                listener.enterRet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet" ):
                listener.exitRet(self)




    def ret(self):

        localctx = llvmParser.RetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ret)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(llvmParser.T__20)
            self.state = 155
            self.type_()
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 156
                self.value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def params(self):
            return self.getTypedRuleContext(llvmParser.ParamsContext,0)


        def Privatevariable(self):
            return self.getToken(llvmParser.Privatevariable, 0)

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)




    def call(self):

        localctx = llvmParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_call)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(llvmParser.T__21)
                self.state = 160
                self.match(llvmParser.T__2)
                self.state = 161
                self.match(llvmParser.Global_var)
                self.state = 162
                self.match(llvmParser.T__5)
                self.state = 163
                self.params()
                self.state = 164
                self.match(llvmParser.T__6)
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(llvmParser.Privatevariable)
                self.state = 167
                self.match(llvmParser.T__10)
                self.state = 168
                self.match(llvmParser.T__21)
                self.state = 169
                self.type_()
                self.state = 170
                self.match(llvmParser.Global_var)
                self.state = 171
                self.match(llvmParser.T__5)
                self.state = 172
                self.params()
                self.state = 173
                self.match(llvmParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Binary_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Privatevariable(self):
            return self.getToken(llvmParser.Privatevariable, 0)

        def bin_op(self):
            return self.getTypedRuleContext(llvmParser.Bin_opContext,0)


        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.ValueContext)
            else:
                return self.getTypedRuleContext(llvmParser.ValueContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_binary_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary_op" ):
                listener.enterBinary_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary_op" ):
                listener.exitBinary_op(self)




    def binary_op(self):

        localctx = llvmParser.Binary_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_binary_op)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(llvmParser.Privatevariable)
            self.state = 178
            self.match(llvmParser.T__10)
            self.state = 179
            self.bin_op()
            self.state = 180
            self.type_()
            self.state = 181
            self.value()
            self.state = 182
            self.match(llvmParser.T__18)
            self.state = 183
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return llvmParser.RULE_bin_op

